[tool.poetry]
name = "piou"
version = "0.14.1"
description = "A CLI toolkit"
authors = ["Julien Brayere <julien.brayere@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andarius/piou"
repository = "https://github.com/andarius/piou"
keywords = ["cli"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rich = ">=10.11.0,<14.0"
typing-extensions = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.331"
commitizen = "^3.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.1.5"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.14.1"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=piou -s -q -x --no-cov-on-fail"
testpaths = [
    "tests"
]
python_files = "*.py"


[tool.pyright]
include = ["piou"]
exclude = []

pythonVersion = "3.9"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # unable to detect undefined names
    "F403",
    #
    "F405"
]
"conftest.py" = [
    # unable to detect undefined names
    "F403",
    #
    "F405"
]
