[project]
name = "piou"
version = "0.22.0"
description = "A CLI toolkit"
authors = [{ name = "Julien Brayere", email = "julien.brayere@obitrain.com" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andarius/piou"
repository = "https://github.com/andarius/piou"
keywords = ["cli"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
include = [
    "LICENSE",
]
requires-python = ">=3.10"

dependencies = [
    "rich>=10.11.0,<15.0",
    "typing-extensions>=4.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.14.4",
]

bump = [
    "commitizen>=4.9.1",
]


[project.scripts]
piou = "piou:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=piou -s -q -x --no-cov-on-fail"
testpaths = [
    "tests"
]
python_files = "*.py"


[tool.pyright]
include = ["piou", "examples", "tests"]
exclude = []

pythonVersion = "3.13"
pythonPlatform = "Linux"


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # unable to detect undefined names
    "F403",
    #
    "F405"
]
"conftest.py" = [
    # unable to detect undefined names
    "F403",
    #
    "F405"
]



[tool.commitizen]
name = "cz_conventional_commits"
version = "0.22.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"
