[project]
name = "piou"
version = "0.28.3"
description = "A CLI toolkit"
authors = [{ name = "Julien Brayere", email = "julien.brayere@obitrain.com" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andarius/piou"
repository = "https://github.com/andarius/piou"
keywords = ["cli"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
include = [
    "LICENSE",
]
requires-python = ">=3.10"

dependencies = [
    "typing-extensions>=4.4.0",
    "rich>=10.11.0,<15.0",
]

[project.optional-dependencies]
raw = []

tui = [
    "textual>=0.40.0",
]

tui-reload = [
    "textual>=0.40.0",
    "watchfiles>=1.0.0",
]

[dependency-groups]
dev = [
    "textual>=0.40.0",
    "textual-dev>=1.0.0",
    "watchfiles>=1.0.0",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.14.4",
    "prek>=0.3.0",
]

docs = [
    "mkdocs-material>=9.5.0",
]

bump = [
    "commitizen>=4.9.1",
]
examples = [
    "aiohttp>=3.13.3",
    "httpx[http2]>=0.28.1",
    "niquests>=3.16.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=piou -s -q -x --no-cov-on-fail"
asyncio_mode = "auto"
testpaths = [
    "tests"
]
python_files = "*.py"


[tool.pyright]
include = ["piou", "examples", "tests"]
exclude = []

pythonVersion = "3.13"
pythonPlatform = "Linux"


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # unable to detect undefined names
    "F403",
    #
    "F405"
]
"conftest.py" = [
    # unable to detect undefined names
    "F403",
    #
    "F405"
]



[tool.commitizen]
name = "cz_conventional_commits"
version = "0.28.3"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
